# wasapaso-python-sdk

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREAR_RELEASE.md  LICENSE  MANIFEST.in  PUBLISH.md  QUICK_START.md  README.md  RELEASE_NOTES_v0.1.0.md  SETUP_GITHUB_PYPI.md  TEST_SUMMARY.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/: async_example.py  basic_usage.py  send_message.py
scripts/: publish.bat  publish.sh
tests/: .env.test  __init__.py  conftest.py  test_client.py  test_error_handling.py  test_exceptions.py  test_integration_client.py  test_integration_messages.py  test_integration_sessions.py  test_messages.py  test_sessions.py
wasapaso/: __init__.py  _http_client.py  client.py  exceptions.py
wasapaso/models/: __init__.py  api_key.py  message.py  session.py
wasapaso/resources/: __init__.py  base.py  messages.py  sessions.py
